[gd_scene load_steps=14 format=2]

[ext_resource path="res://Art/Enemies/enemy_drone_turret-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/FlyingRangedEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/WanderController.gd" type="Script" id=4]
[ext_resource path="res://Scripts/EnemyHealthBar.gd" type="Script" id=5]
[ext_resource path="res://Scenes/TeleportParticles.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sound/explosion_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/hit_1.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=9]
[ext_resource path="res://Art/Lights/Spotlight.png" type="Texture" id=10]
[ext_resource path="res://Sound/pulse_2.wav" type="AudioStream" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Dead"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[node name="FlyingRangedEnemy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 2147483712
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.52, 0.789 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 5
position = Vector2( 1.11488, 0 )
texture = ExtResource( 1 )
vframes = 2
hframes = 9
frame = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.75
anims/Dead = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WanderController" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="WanderTimer" type="Timer" parent="WanderController"]
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -6.0
max_distance = 300.0
attenuation = 1.5

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -4.0
max_distance = 300.0

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )
volume_db = -7.0
max_distance = 300.0
attenuation = 1.5

[node name="HealthBar" parent="." instance=ExtResource( 9 )]
margin_left = -9.0
margin_top = -11.0
margin_right = -9.0
margin_bottom = -10.92
rect_scale = Vector2( 0.25, 0.25 )
script = ExtResource( 5 )

[node name="HealthBarUnder" parent="HealthBar" index="0"]
max_value = 30.0
value = 30.0

[node name="HealthBarOver" parent="HealthBar" index="1"]
max_value = 30.0
value = 30.0
texture_over = null

[node name="RayCast2D" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="Particles2D" parent="." instance=ExtResource( 6 )]

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, 6 )
texture = ExtResource( 10 )
offset = Vector2( 0, 87 )
texture_scale = 0.29
color = Color( 0.870588, 0, 0, 1 )
energy = 1.8
shadow_enabled = true
shadow_buffer_size = 128
shadow_gradient_length = 0.2
shadow_filter = 1
shadow_filter_smooth = 2.0
[connection signal="damaged" from="." to="HealthBar" method="_on_FlyingEnemy_damaged"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="WanderController/WanderTimer" to="WanderController" method="_on_WanderTimer_timeout"]

[editable path="HealthBar"]
